@@ -126,8 +126,9 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © 2011-2019 Michal Josef Špaček
-     BSD 2-Clause License
+    © 2011-2019 Michal Josef Špaček
+
+    BSD 2-Clause License
 
 VERSION
     0.05
