@@ -333,8 +333,9 @@ L<http://skim.cz>
 
 =head1 LICENSE AND COPYRIGHT
 
- © 2011-2019 Michal Josef Špaček
- BSD 2-Clause License
+© 2011-2019 Michal Josef Špaček
+
+BSD 2-Clause License
 
 =head1 VERSION
 
