@@ -1,6 +1,7 @@
 0.05
  - Fix Makefile.PL which fails with no '.' in @INC.
  - Fix link to image in doc.
+ - Improve LICENSE AND COPYRIGHT section in doc.
  - Update Module::Install to 1.21 version.
  - Update copyright years.
  - Update my name to actual version.
